Modified RedundantPredicates heuristic to also consider removed states
See: https://gitlab.com/sosy-lab/software/cpachecker/-/merge_requests/322#note_2909257203